--- a/catalog_app.json
+++ b/catalog_app.json
@@ -3,7 +3,7 @@
     "model": "catalog_app.category",
     "pk": 1,
     "fields": {
-      "name": "Фрукт",
+      "name": "Фрукты",
       "desc": "Свежие из Астрахани"
     }
   },
@@ -47,9 +47,9 @@
       "desc": "Жёлтый",
       "image": "products/abrikosy.jpg",
       "category": 1,
-      "price": 123,
+      "price": 23,
       "created_at": "2023-07-20T08:50:28.506Z",
-      "update_at": "2023-07-20T09:11:15.214Z"
+      "update_at": "2023-07-24T20:16:32.250Z"
     }
   },
   {
@@ -86,9 +86,9 @@
       "desc": "Длинный",
       "image": "products/ogurec.jpg",
       "category": 2,
-      "price": 987,
+      "price": 7,
       "created_at": "2023-07-20T08:50:28.506Z",
-      "update_at": "2023-07-20T09:12:21.889Z"
+      "update_at": "2023-07-24T20:16:50.369Z"
     }
   },
   {
@@ -141,6 +141,58 @@
       "price": 258,
       "created_at": "2023-07-20T08:50:28.506Z",
       "update_at": "2023-07-20T09:11:35.927Z"
+    }
+  },
+  {
+    "model": "catalog_app.product",
+    "pk": 9,
+    "fields": {
+      "name": "Груша",
+      "desc": "Сладкая и жёлтая",
+      "image": "products/grusha.jpg",
+      "category": 1,
+      "price": 25,
+      "created_at": "2023-07-23T14:56:28.918Z",
+      "update_at": "2023-07-23T14:58:51.569Z"
+    }
+  },
+  {
+    "model": "catalog_app.product",
+    "pk": 12,
+    "fields": {
+      "name": "Патиссон",
+      "desc": "Белый и свежий",
+      "image": "products/patison.jpg",
+      "category": 2,
+      "price": 15,
+      "created_at": "2023-07-23T16:07:19.084Z",
+      "update_at": "2023-07-24T07:34:22.781Z"
+    }
+  },
+  {
+    "model": "catalog_app.product",
+    "pk": 13,
+    "fields": {
+      "name": "Капуста",
+      "desc": "С добавлением любви и ласки.",
+      "image": "products/kapusta.jpg",
+      "category": 5,
+      "price": 1,
+      "created_at": "2023-07-24T17:08:25.330Z",
+      "update_at": "2023-07-24T17:08:25.330Z"
+    }
+  },
+  {
+    "model": "catalog_app.product",
+    "pk": 14,
+    "fields": {
+      "name": "Лимон",
+      "desc": "Жёлтый и кислый",
+      "image": "products/limon.jpg",
+      "category": 1,
+      "price": 5,
+      "created_at": "2023-07-24T21:12:25.760Z",
+      "update_at": "2023-07-24T21:12:25.760Z"
     }
   }
 ]
